--- a/templates/PostDetail.html
+++ b/templates/PostDetail.html
@@ -32,6 +32,7 @@ background-color: midnightblue;
  <p>{{object.extended_info}}</p>
     </div>
 
-
+<button><a href="/post/{{object.id}}/delete">delete</a></button>
+<button><a href="/post/{{object.id}}/update">update</a></button>
 </body>
 </ht
